--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -20,23 +20,29 @@
     .hero__text--h1 {
         grid-row: 2;
         align-self: end;
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        margin:  0 auto;
         font-family: $hero-font;
-        font-size: 1.1rem;
+        font-size: clamp(0.8rem, 4vw, 1.8rem);
         font-weight: 600;
         letter-spacing: 1px;
         color: $text-color;
+        text-wrap: nowrap;
     }
-
-  
 
     .hero__text--h2 {
         grid-row: 3;
         align-self: start;
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        margin: 0 auto;
         font-family: $hero-font;
-        font-size: 1rem;
+        font-size: clamp(0.6rem, 3.5vw, 1.6rem);
         font-weight: 400;
-        margin-top: 10px;
-        letter-spacing: 1px;
+        letter-spacing: .8px;
         color: $text-color;
     }
 
@@ -128,22 +134,73 @@
         display: grid;
         width: 100%;
         height: 100vh;
-        margin: 0 20px;
-        margin-top: 180px;
+        margin: 0 auto;
         scroll-snap-align: start;
         place-items: center;
         overflow: hidden;
     
+        grid-template-rows: 1fr auto 1fr; 
+        grid-template-columns: 1fr;
+        scroll-snap-align: start;
+        place-items: center;
+        overflow: hidden;
 
-        /*Main Hero Logo Image*/
-        img {
-            width: 80%;
-            min-height: 150px;
-            image-rendering: optimizeQuality;
-            object-fit: cover;
-            align-self: center;
-            justify-self: center;
+        .hero__text--h1 {
+            grid-row: 2;
+            align-self: end;
+            margin: 0 auto;
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+             
+            text-align: center; 
+            font-family: $hero-font;
+            font-size: clamp(1.5rem, 2.5vw, 2.75rem);
+            font-weight: 600;
+            letter-spacing: 1px;
+            line-height: 3.5rem;    
+            color: $text-color;
+            text-wrap: nowrap;
         }
+    
+        .hero__text--h2 {
+            grid-row: 3;
+            align-self: start;
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            font-family: $hero-font;
+            font-size: clamp(1.2rem, 2.2vw, 2rem);
+            font-weight: 400;
+            margin-top: 10px;
+            letter-spacing: 1px;
+            color: $text-color;
+        }
+    
+        #typedTextMd {
+            overflow: hidden; 
+            border-right: 0.1em solid $text-color;
+            white-space: nowrap; 
+            margin: 0 auto; 
+            letter-spacing: 0.05em; 
+            animation: blink-caret 0.75s step-end infinite;
+          }
+          
+          @keyframes blink-caret {
+            from, to { border-color: transparent; }
+            50% { border-color: $text-color; }
+          }
+    
+
+        // /*Main Hero Logo Image*/
+        // img {
+        //     width: 80%;
+        //     min-height: 150px;
+        //     image-rendering: optimizeQuality;
+        //     object-fit: cover;
+        //     align-self: center;
+        //     justify-self: center;
+        // }
     }
 }
 
