--- a/scss/components/_burger.scss
+++ b/scss/components/_burger.scss
@@ -83,6 +83,9 @@
           text-decoration: none;
           padding: 10px;
           letter-spacing: 0.1rem;
+          text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
+                       2px 2px 0 rgba(0, 0, 0, 0.2); 
+                       filter: blur(0.1px); 
 
               // Links Hover Effect 
         
