--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -13,11 +13,38 @@
     scroll-snap-align: start;
     place-items: center;
     overflow: hidden;
-
     grid-template-rows: 1fr auto 1fr; 
     grid-template-columns: 1fr;
-   
- 
+    
+//    .hero__image {
+       
+//        img {
+//            width: 100vw;
+//            height: 800px;
+//            position: relative;
+//            background-size: cover;
+//            background-position: 50% 50%;
+//            object-fit: cover;
+//            background-blend-mode: difference;
+
+//            &::after {
+//                content: "";
+//                position: absolute;
+//                top: 0;
+//                left: 0;
+//                width: 100%;
+//                height: 800px;
+//                color: $background-color-comp-dark;
+//                opacity: 0.7;
+//                z-index: 1;
+//            }
+//        }
+
+       
+//    }
+
+
+    
 
     .hero__text--h1 {
         grid-row: 2;
@@ -81,14 +108,14 @@
       }
 
       .pattern {
-        position: absolute;
-        top: var(--top, 0);
-        left: var(--left, 0);
-        width: var(--size, 20px);
-        height: var(--size, 20px);
-        background-color: var(--color, $primary-color);
-        border-radius: 50%;
-        opacity: 0.6;
+        position: relative;
+        top: var(--top);
+        left: var(--left);
+        width: var(--size);
+        height: var(--size);
+        background-color: var(--color);
+        border-radius: 0;
+        opacity: 0.8;
     }
 
     /*Scroll Down Snap Align Icon*/
