--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -37,21 +37,16 @@
               place-items: center;
               grid-area: menu__logo;
               margin: 0 auto;
-              align-self: start;
-              
+             
+              padding: 0;
               margin-top: 30px;
               margin-bottom: 220px;
               margin-right: 10px;
               font-family: $logo-font;  
-              font-size: 2.5rem;
+              font-size: 4.5rem;
               font-weight: 400;
-              line-height: 3.5rem;
-              background-image: 
-              linear-gradient(to right, $primary-color, $primary-color), 
-              linear-gradient(to right, $primary-color, $primary-color); 
-              background-position: top center, bottom center; 
-              background-size: 50% 4px, 50% 4px; 
-              background-repeat: no-repeat; 
+              
+              
             }
               
     
